Onboarding v2 layout and flow
- Dependencies that need to be added on project side are brought up and option to add them are available.
- Added more icons.
- Basic layout change for the onboarding window.
- java version selection option available.
- Agent download only occurs if needed.
- File write WIP.
- code cleanup WIP.